@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0102
+// generated by Fast Light User Interface Designer (fluid) version 1.0104
 
 #include "alignment_panel.h"
 
@@ -110,6 +110,7 @@ Fl_Window* make_project_window() {
   }
   return w;
 }
+Fl_Text_Buffer *shell_run_buffer;
 
 Fl_Window *settings_window=(Fl_Window *)0;
 
@@ -144,7 +145,7 @@ static void cb_prevpos_button(Fl_Check_Button*, void*) {
 
 Fl_Window* make_settings_window() {
   Fl_Window* w;
-  { Fl_Window* o = settings_window = new Fl_Window(255, 213, "GUI Settings");
+  { Fl_Window* o = settings_window = new Fl_Window(255, 210, "GUI Settings");
     w = o;
     { Fl_Button* o = new Fl_Button(185, 179, 60, 25, "Close");
       o->tooltip("Close this dialog.");
@@ -223,13 +224,13 @@ static void cb_Cancel(Fl_Button*, void*) {
 
 Fl_Window *shell_run_window=(Fl_Window *)0;
 
-Fl_Browser *shell_run_list=(Fl_Browser *)0;
-
 Fl_Return_Button *shell_run_button=(Fl_Return_Button *)0;
 
 static void cb_shell_run_button(Fl_Return_Button*, void*) {
   shell_run_window->hide();
 }
+
+Fl_Text_Display *shell_run_display=(Fl_Text_Display *)0;
 
 Fl_Window* make_shell_window() {
   Fl_Window* w;
@@ -279,13 +280,15 @@ Fl_Window* make_shell_window() {
   }
   { Fl_Window* o = shell_run_window = new Fl_Window(555, 435, "Shell Command Output");
     w = o;
-    { Fl_Browser* o = shell_run_list = new Fl_Browser(10, 10, 535, 380);
+    { Fl_Return_Button* o = shell_run_button = new Fl_Return_Button(465, 400, 80, 25, "Close");
+      o->callback((Fl_Callback*)cb_shell_run_button);
+    }
+    { Fl_Text_Display* o = shell_run_display = new Fl_Text_Display(10, 10, 530, 380);
       o->textfont(4);
       o->textsize(12);
       Fl_Group::current()->resizable(o);
-    }
-    { Fl_Return_Button* o = shell_run_button = new Fl_Return_Button(465, 400, 80, 25, "Close");
-      o->callback((Fl_Callback*)cb_shell_run_button);
+      shell_run_buffer = new Fl_Text_Buffer();
+      shell_run_display->buffer(shell_run_buffer);
     }
     o->end();
   }
