@@ -1,8 +1,10 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0102
+// generated by Fast Light User Interface Designer (fluid) version 1.0104
 
 #ifndef alignment_panel_h
 #define alignment_panel_h
 #include <FL/Fl.H>
+#include <FL/Fl_Text_Buffer.H>
+#include <FL/Fl_Text_Display.H>
 #include <FL/Fl_Window.H>
 #include <FL/Fl_Preferences.H>
 #include <FL/Fl_Tooltip.H>
@@ -31,6 +33,7 @@ Fl_Window* make_project_window();
 extern Fl_Menu_Item menu_i18n_type_chooser[];
 extern void i18n_cb(Fl_Choice *,void *);
 extern Fl_Preferences fluid_prefs;
+extern Fl_Text_Buffer *shell_run_buffer;
 extern Fl_Window *settings_window;
 #include <FL/Fl_Check_Button.H>
 extern Fl_Check_Button *tooltips_button;
@@ -46,9 +49,9 @@ extern Fl_Check_Button *shell_writemsgs_button;
 #include <FL/Fl_Return_Button.H>
 extern void do_shell_command(Fl_Return_Button*, void*);
 extern Fl_Window *shell_run_window;
-#include <FL/Fl_Browser.H>
-extern Fl_Browser *shell_run_list;
 extern Fl_Return_Button *shell_run_button;
+#include <FL/Fl_Text_Display.H>
+extern Fl_Text_Display *shell_run_display;
 Fl_Window* make_shell_window();
 extern Fl_Window *grid_window;
 extern void grid_cb(Fl_Input*, long);
