@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.4
 
+	- FLUID now uses an Fl_Text_Display widget for command
+	  output, which allows you to copy and paste text from
+	  command output into other windows.
 	- Fl_Gl_Window could cause a bus error on MacOS X if the
 	  parent window was not yet shown.
 	- FLUID could crash after displaying a syntax error
